Added HTML files and updated index.md for GitHub Pages

--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -626,6 +626,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Identificación de Outliers con Boxplots\n",
+    "\n",
+    "Este script se utiliza para generar boxplots que permitan identificar la presencia de valores atípicos (outliers) en el conjunto de datos. La identificación de estos outliers es crucial, ya que serán eliminados en pasos posteriores del análisis.\n",
+    "\n",
+    "## Selección de Columnas para Visualización\n",
+    "\n",
+    "Primero, definimos las columnas que queremos analizar mediante boxplots para identificar posibles outliers.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
